tests/architecture/fixtures/valid/core-projection.ts
import type { CommerceProjectionPort } from "@nexoraxs/contracts";
export type Projection = CommerceProjectionPort;
