tests/architecture/fixtures/invalid/order-command-boundaries/repository-ui.ts
import { useApp } from "../../../../../apps/commerce/lib/store/AppProvider";

export class InvalidOrderRepository {
  readonly provider = useApp;
}
